	PR ld/13491 	* coff-i386.c (coff_i386_rtype_to_howto <R_SECREL32>): Test 	h->root.type not h->type. 	* coff-x86_64.c (coff_amd64_rtype_to_howto <R_AMD64_SECREL>): Likewise.